demo/01.traffic.control/02.canary.release/01.destination-rule-recommendation-v1-v2.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: recommendation-dr
spec:
  #This is the service of the recommendation
  host: recommendation-svc
  subsets:
  - labels:
      version: v1
    name: version-v1
  - labels:
      version: v2
    name: version-v2
