demo/01.traffic.control/02.canary.release/02.virtual-service-recommendation-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-vs
spec:
  hosts:
  #This is the service of the recommendation
  - recommendation
  http:
  - route:
    - destination:
        #This is the service of the recommendation
        host: recommendation
        subset: version-v1
      weight: 100
