demo/01.traffic.control/02.canary.release/05.virtual-service-recommendation-v1_and_v2_0_100.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-vs
spec:
  hosts:
  #This is the service of the recommendation
  - recommendation
  http:
  - route:
    - destination:
        #This is the service of the recommendation
        host: recommendation
        subset: version-v1
      weight: 0
    - destination:
        host: recommendation
        subset: version-v2
      weight: 100
